--- a/config/locales.yml
+++ b/config/locales.yml
@@ -3,14 +3,18 @@ en:
   farewell_message: "Bye"
   start_menu_message: "Choose that you want"
   thanks: "Thanks"
-  signin: "[Sign in]"
+  signin: "[Start]"
   settings: "[Settings]"
   hide_menu: "[Hide menu]"
+  add_user_email: "Enter your email in Teachbase"
+  add_user_password: "Enter you password in Teachbase"
 ru: 
   greeting_message: "Привет"
   farewell_message: "Пока"
-  start_menu_message: "С чего начнем?"
+  start_menu_message: "Что делаем?"
   thanks: "Спасибо"
-  signin: "[Войти]"
+  signin: "[Старт]"
   settings: "[Настройки]"
-  hide_menu: "[Спрячь меню]"
+  hide_menu: "[Скрыть меню]"
+  add_user_email: "Введите ваш email в Teachbase"
+  add_user_password: "Введите ваш пароль в Teachbase"
