--- a/config/locales.yml
+++ b/config/locales.yml
@@ -3,18 +3,52 @@ en:
   farewell_message: "Bye"
   start_menu_message: "Choose that you want"
   thanks: "Thanks"
-  signin: "[Start]"
-  settings: "[Settings]"
+  signin: "Authorization"
+  settings: "Settings"
   hide_menu: "[Hide menu]"
-  add_user_email: "Enter your email in Teachbase"
-  add_user_password: "Enter you password in Teachbase"
+  add_user_email: "Enter your *EMAIL*"
+  add_user_password: "Enter you *PASSWORD*"
+  not_correct_email: "This is not email."
+  error: "Error."
+  auth_failed: "Not correct email or password."
+  try_again: "Try again. Or sign *'/stop'* for stopping."
+  greetings: "Welcome"
+  auth_success: "Authorization succeed"
+  not_correct_data_input: "Not correct data input."
+  in_teachbase: "in Teachbase"
+  retry: "Retry connection"
+  active_courses: "active"
+  archived_courses: "archived"
+  average_score_percent: "Summary average score in your profile"
+  total_time_spent: "Total time spent by learning"
+  courses: "Courses"
+  hour: "h."
+  minute: "min."
+  profile_state: "*Your profile progress*"
 ru: 
   greeting_message: "Привет"
   farewell_message: "Пока"
   start_menu_message: "Что делаем?"
   thanks: "Спасибо"
-  signin: "[Старт]"
-  settings: "[Настройки]"
+  signin: "Войти"
+  settings: "Настройки"
   hide_menu: "[Скрыть меню]"
-  add_user_email: "Введите ваш email в Teachbase"
-  add_user_password: "Введите ваш пароль в Teachbase"
+  add_user_email: "Введите ваш *EMAIL*"
+  add_user_password: "Введите ваш *ПАРОЛЬ*"
+  not_correct_email: "Это не email."
+  error: "Ошибка."
+  auth_failed: "Неправильный логин или пароль."
+  try_again: "Попробуйте еще раз. Или *'/stop'* - чтобы остановить."
+  greetings: "Добро пожаловать"
+  auth_success: "Вход выполнен успешно"
+  not_correct_data_input: "Введены неверные данные."
+  in_teachbase: "в Teachbase"
+  retry: "Попытка подключения"
+  active_courses: "на изучении"
+  archived_courses: "завершенные"
+  average_score_percent: "Успешность прохождения всех курсов"
+  total_time_spent: "Общее время прохождения курсов"
+  courses: "Курсы"
+  hour: "ч."
+  minute: "мин."
+  profile_state: "*Прогресс твоего профиля*"
