v.8.3. - 23.05.2020 - Added task answer sender

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -39,11 +39,11 @@ en:
   progress: "Progress"
   started_at: "Started at"
   success: "Successful"
-  complete_status: "Complete status"
+  status: "Complete status"
   success_true: "Success"
   success_false: "Failed"
-  complete_status_active: "Active"
-  complete_status_archived: "Archived"
+  status_active: "Active"
+  status_archived: "Archived"
   section: "Section"
   section2: "section"
   section_show_hint: "For example *[id:1]* - will open section №1"
@@ -94,6 +94,16 @@ en:
   approve: "Approve"
   view: "View"
   viewed: "Viewed"
+  send: "Send"
+  answer: "Answer"
+  task: "Task"
+  attachments: "Attachments"
+  enter_your_answer: "Enter your answer"
+  confirm_action: "Confirm this action"
+  accept: "Accept"
+  decline: "Decline"
+  accepted: "Accepted"
+  declined: "Declined"
 ru: 
   greeting_message: "Привет,"
   farewell_message: "Пока"
@@ -135,11 +145,11 @@ ru:
   progress: "Прогресс"
   started_at: "Дата начала"
   success: "Успешность"
-  complete_status: "Статус завершенности"
+  status: "Статус завершенности"
   success_true: "Успешно"
   success_false: "Не успешно"
-  complete_status_active: "На изучении"
-  complete_status_archived: "Завершен"
+  status_active: "На изучении"
+  status_archived: "Завершен"
   section: "Часть"
   section2: "части"
   section_show_hint: "Например, [id:1] - открыть Часть №1"
@@ -190,3 +200,13 @@ ru:
   approve: "Подтвердить"
   view: "Просмотр"
   viewed: "Просмотрено"
+  send: "Отправить"
+  answer: "Ответ"
+  task: "Задание"
+  attachments: "Вложения"
+  enter_your_answer: "Введите ваш ответ"
+  confirm_action: "Подтвердите действие"
+  accept: "Подтвердить"
+  decline: "Отменить"
+  accepted: "Подтверждено"
+  declined: "Отменено"
