Updated quizzes and some interface fixes

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -24,7 +24,7 @@ en:
   total_time_spent: "Total time spent by learning"
   courses: "Courses"
   hour: "h."
-  minute: "min."
+  minutes: "min."
   profile_state: "Your profile progress"
   show_profile_state: "Profile"
   need_auth: "You must be authorized"
@@ -37,7 +37,7 @@ en:
   open: "Open"
   course_results: "Results"
   deadline: "Deadline"
-  progress: "Progress"
+  progress: "Learning progress"
   started_at: "Started at"
   success: "Successful"
   status: "Complete status"
@@ -118,6 +118,19 @@ en:
   undefined_action: "Oops! Don't know how to do it at now"
   battle: "Battle"
   description: "Description"
+  categories: "Categories"
+  questions_count: "Questions count"
+  passing_grade: "Passing grade"
+  attempts: "Attemps count"
+  highest: "Highest"
+  result: "Result"
+  time_limit: "Time limit"
+  status_new: "Not started"
+  status_checking: "Checking"
+  status_passed: "Passed"
+  status_failed: "Not passed"
+  status_inprogress: "In progress"
+  latest: "Latest"
 ru: 
   greeting_message: "Привет,"
   farewell_message: "Пока"
@@ -144,7 +157,7 @@ ru:
   total_time_spent: "Общее время прохождения курсов"
   courses: "Курсы"
   hour: "ч."
-  minute: "мин."
+  minutes: "мин."
   profile_state: "Прогресс твоего профиля"
   show_profile_state: "Профиль"
   need_auth: "Требуется авторизация"
@@ -157,9 +170,9 @@ ru:
   open: "Перейти"
   course_results: "Результаты"
   deadline: "Дата окончания"
-  progress: "Прогресс"
+  progress: "Прогресс прохождения"
   started_at: "Дата начала"
-  success: "Успешность"
+  success: "Успешность прохождения"
   status: "Статус завершенности"
   state: "Статус"
   success_true: "Успешно"
@@ -238,3 +251,16 @@ ru:
   undefined_action: "Ой! С этим я еще не умею работать :("
   battle: "Сражение"
   description: "Описание"
+  categories: "Категории"
+  questions_count: "Кол-во вопросов"
+  passing_grade: "Проходной балл"
+  attempts: "Кол-во попыток"
+  highest: "Наилучший"
+  result: "Результат"
+  time_limit: "Время на прохождение"
+  status_new: "Не начато"
+  status_checking: "На проверке"
+  status_passed: "Пройдено"
+  status_failed: "Не пройдено"
+  status_inprogress: "В прохождении"
+  latest: "Последний"
