Updated start menu for modes

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -248,7 +248,7 @@ ru:
   ready: "Готово"
   enter_your_next_answer: "Продолжайте отправлять боту сообщения. Или нажмите на кнопку в меню"
   checking: "На проверке"
-  undefined_action: "Ой! С этим я еще не умею работать :("
+  undefined_action: "Ой! С этим я еще не умею работать :( Но скоро научусь!"
   battle: "Сражение"
   description: "Описание"
   categories: "Категории"
