Added comments for task answer

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -110,6 +110,7 @@ en:
   show: "Show"
   answers: "Answers"
   comments: "Comments"
+  comment: "Comment"
   commented: "Commented"
   stop: "Stop"
   ready: "Ready"
@@ -238,11 +239,12 @@ ru:
   confirm_action: "Подтвердите действие"
   accept: "Подтвердить"
   decline: "Отменить"
-  accepted: "Подтверждено"
-  declined: "Отменено"
+  accepted: "Принято"
+  declined: "Не принято"
   show: "Показать"
   answers: "Ответы"
   comments: "Комментарии"
+  comment: "Комментарий"
   commented: "Прокоментировал"
   stop: "Стоп"
   ready: "Готово"
