--- a/config/locales.yml
+++ b/config/locales.yml
@@ -10,7 +10,7 @@ en:
   add_user_login: "Enter your <b>LOGIN</b> (email/phone)"
   add_user_password: "Enter you <b>PASSWORD</b>"
   not_correct_email: "This is not email."
-  error: "Error."
+  error: "Error"
   auth_failed: "Not correct email or password."
   try_again: "Try again"
   greetings: "Welcome"
@@ -132,6 +132,7 @@ en:
   status_failed: "Not passed"
   status_inprogress: "In progress"
   latest: "Latest"
+  forbidden: "Forbidden"
 ru: 
   greeting_message: "Привет,"
   farewell_message: "Пока"
@@ -144,7 +145,7 @@ ru:
   add_user_login: "Введите ваш <b>ЛОГИН</b> (email/номер телефона)"
   add_user_password: "Введите ваш <b>ПАРОЛЬ</b>"
   not_correct_email: "Это не email."
-  error: "Ошибка."
+  error: "Ошибка"
   auth_failed: "Неправильный логин или пароль."
   try_again: "Попробуйте еще раз"
   greetings: "Добро пожаловать"
@@ -266,3 +267,4 @@ ru:
   status_failed: "Не пройдено"
   status_inprogress: "В прохождении"
   latest: "Последний"
+  forbidden: "Доступ закрыт"
