--- a/config/locales.yml
+++ b/config/locales.yml
@@ -69,10 +69,14 @@ en:
   show_all: "Show all"
   show_avaliable: "Show avaliable"
   show_unvaliable: "Show unvaliable"
+  show_all_sections: "Show all sections"
+  show_avaliable_sections: "Show avaliable sections"
+  show_unvaliable_sections: "Show unvaliable sections"
   from: "from"
   avaliable: "Avaliable"
   section3: "sections"
   find_by_query_num: "Find by №"
+  find_by_query_num_sections: "Find section by №"
   enter_the_number: "Enter the number"
   edit: "Edit"
   editing_settings: "Editing settings"
@@ -181,16 +185,16 @@ ru:
   success_false: "Не успешно"
   status_active: "На изучении"
   status_archived: "Завершен"
-  section: "Часть"
-  section2: "части"
-  section_show_hint: "Например, [id:1] - открыть Часть №1"
+  section: "Раздел"
+  section2: "разделов"
+  section_show_hint: "Например, [id:1] - открыть Раздел №1"
   in: "в"
   information: "Информация"
   course_sections: "Содержание"
   update_data: "Обновить данные"
   updating_data: "Обновление данных. Подождите"
   updating_success: "Данные обновлены успешно"
-  section_unable: "Станет доступна после прохождения предыдущих частей"
+  section_unable: "Станет доступна после прохождения предыдущих разделов"
   section_delayed: "Доступ откроется:"
   section_unpublish: "Не опубликована"
   material: "Материал"
@@ -204,10 +208,14 @@ ru:
   show_all: "Показать все"
   show_avaliable: "Доступные"
   show_unvaliable: "Не доступные"
+  show_all_sections: "Все разделы"
+  show_avaliable_sections: "Доступные разделы"
+  show_unvaliable_sections: "Не доступные разделы"
   from: "из"
   avaliable: "Доступно"
-  section3: "частей"
+  section3: "разделов"
   find_by_query_num: "Найти по №"
+  find_by_query_num_sections: "Найти раздел по №"
   enter_the_number: "Введите номер"
   edit: "Изменить"
   editing_settings: "Изменение настроек"
@@ -241,7 +249,7 @@ ru:
   accept: "Подтвердить"
   decline: "Отменить"
   accepted: "Принято"
-  declined: "Не принято"
+  declined: "Отклонено"
   show: "Показать"
   answers: "Ответы"
   comments: "Комментарии"
