--- a/config/locales.yml
+++ b/config/locales.yml
@@ -18,8 +18,8 @@ en:
   not_correct_data_input: "Not correct data input."
   teachbase: "Teachbase"
   retry: "Retry connection"
-  courses_active: "active"
-  courses_archived: "archived"
+  cs_active: "active"
+  cs_archived: "archived"
   average_score_percent: "Summary average score in your profile"
   total_time_spent: "Total time spent by learning"
   courses: "Courses"
@@ -31,7 +31,7 @@ en:
   for_profile: "for profile"
   stage_empty: "It's just empty now"
   enter: "Authorization"
-  courses_list: "Courses list"
+  cs_list: "Courses list"
   show_course_list: "Show course list"
   course: "Course"
   open: "Open"
@@ -60,7 +60,7 @@ en:
   section_unpublish: "This section is unpublish now"
   material: "Material"
   empty: "Nothing is here"
-  courses_update: "Update courses list"
+  cs_update: "Update courses list"
   sign_out: "Exit"
   unexpected_error: "Unexpected error"
   scenario: "Study mode"
@@ -157,8 +157,8 @@ ru:
   not_correct_data_input: "Введены неверные данные."
   teachbase: "Teachbase"
   retry: "Попытка подключения"
-  courses_active: "на изучении"
-  courses_archived: "завершенные"
+  cs_active: "на изучении"
+  cs_archived: "завершенные"
   average_score_percent: "Успешность прохождения всех курсов"
   total_time_spent: "Общее время прохождения курсов"
   courses: "Курсы"
@@ -170,7 +170,7 @@ ru:
   for_profile: "профиля"
   stage_empty: "Пока что здесь пусто"
   enter: "Войти"
-  courses_list: "Список курсов"
+  cs_list: "Список курсов"
   show_course_list: "Показать список курсов"
   course: 'Курс'
   open: "Перейти"
@@ -199,7 +199,7 @@ ru:
   section_unpublish: "Не опубликована"
   material: "Материал"
   empty: "Здесь ничего нет"
-  courses_update: "Обновить список курсов"
+  cs_update: "Обновить список курсов"
   sign_out: "Выход"
   unexpected_error: "Неожиданная ошибка"
   scenario: "Режим обучения"
