Added some logics on empty ai reaction

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -121,6 +121,7 @@ en:
   enter_your_next_answer: "Continue to send messages to the bot. Or click on the button in the menu"
   checking: "Checking"
   undefined_action: "Oops! Don't know how to do it at now"
+  undefined_text: "Oh! I don't understand what is needed ... Rephrase?"
   battle: "Battle"
   description: "Description"
   categories: "Categories"
@@ -263,6 +264,7 @@ ru:
   enter_your_next_answer: "Продолжайте отправлять боту сообщения. Или нажмите на кнопку в меню"
   checking: "На проверке"
   undefined_action: "Ой! С этим я еще не умею работать :( Но скоро научусь!"
+  undefined_text: "Ой! Не понял что нужно... Перефразируй?"
   battle: "Сражение"
   description: "Описание"
   categories: "Категории"
