Added multi account access

--- a/config/secrets.yml.sample
+++ b/config/secrets.yml.sample
@@ -1,7 +1,9 @@
 telegram_bot_token: ''
+sap_conversation_ai_token: '' # For AI use cases (https://cai.tools.sap/)
 api_client_id: ''
 api_client_secret: ''
 api_account_id: ''
+ai_mode: 'on'
 lms_host: 'https://go.teachbase.ru'
 token_expiration_time: '7200'
 rest_client: 'RestClient'
