--- a/config/locales.yml
+++ b/config/locales.yml
@@ -141,6 +141,9 @@ en:
   completed: "Completed"
   new: "New"
   about_bot: "Hi! I am a chatbot - personal assistant in the world of distance learning. With me, training becomes more accessible and interesting. Where do we start?"
+  company: "Company"
+  accounts: "Accounts"
+  not_found: "Not found"
 ru:
   greeting_message: "Привет,"
   farewell_message: "Пока"
@@ -284,3 +287,6 @@ ru:
   completed: "Пройдено"
   new: "Новый"
   about_bot: "Привет! Я чат-бот — личный помощник в мире дистанционного обучения. Со мной обучение становится доступнее и интереснее. С чего начнем?"
+  company: "Организация"
+  accounts: "Аккаунты"
+  not_found: "Не найдено"
