--- a/config/locales.yml
+++ b/config/locales.yml
@@ -202,9 +202,9 @@ ru:
   update_data: "Обновить данные"
   updating_data: "Обновление данных. Подождите"
   updating_success: "Данные обновлены успешно"
-  section_unable: "Станет доступна после прохождения предыдущих разделов"
+  section_unable: "Станет доступно после прохождения предыдущих разделов"
   section_delayed: "Доступ откроется:"
-  section_unpublish: "Не опубликована"
+  section_unpublish: "Не опубликовано"
   material: "Материал"
   empty: "Здесь ничего нет"
   cs_update: "Обновить список курсов"
