Updated AI logics

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -145,6 +145,8 @@ en:
   accounts: "Accounts"
   not_found: "Not found"
   choose_account: "Choose account"
+  message: "Message"
+  sent: "Sent"
 ru:
   greeting_message: "Привет,"
   farewell_message: "Пока"
@@ -200,8 +202,8 @@ ru:
   information: "Информация"
   course_sections: "Содержание"
   update_data: "Обновить данные"
-  updating_data: "Обновление данных. Подождите"
-  updating_success: "Данные обновлены успешно"
+  updating_data: "Загрузка. Подождите"
+  updating_success: "Загрузка данных прошла успешно"
   section_unable: "Станет доступно после прохождения предыдущих разделов"
   section_delayed: "Доступ откроется:"
   section_unpublish: "Не опубликовано"
@@ -292,3 +294,5 @@ ru:
   accounts: "Аккаунты"
   not_found: "Не найдено"
   choose_account: "Выберите аккаунт"
+  message: "Сообщение"
+  sent: "Отправлено"
