--- a/config/locales.yml
+++ b/config/locales.yml
@@ -26,7 +26,7 @@ en:
   hour: "h."
   minutes: "min."
   profile_state: "Your profile progress"
-  user_profile: "Profile"
+  profile: "Profile"
   need_auth: "You must be authorized"
   for_profile: "for profile"
   stage_empty: "It's just empty now"
@@ -176,7 +176,7 @@ ru:
   hour: "ч."
   minutes: "мин."
   profile_state: "Прогресс твоего профиля"
-  user_profile: "Профиль"
+  profile: "Профиль"
   need_auth: "Требуется авторизация"
   for_profile: "профиля"
   stage_empty: "Пока что здесь пусто"
