--- a/config/locales.yml
+++ b/config/locales.yml
@@ -88,6 +88,7 @@ en:
   choose_localization: "Choose localization"
   choose_scenario: "Choose study mode"
   back: "Back"
+  forward: "Forward"
   show_more: "Show more"
   courses2: "courses"
   materials: "Material"
@@ -148,6 +149,8 @@ en:
   message: "Message"
   sent: "Sent"
   file: "File"
+  page: "Page"
+  show_less: "Show less"
 ru:
   greeting_message: "Привет,"
   farewell_message: "Пока"
@@ -238,6 +241,7 @@ ru:
   choose_localization: "Выберите язык интерфейса"
   choose_scenario: "Выберите режим обучения"
   back: "Назад"
+  forward: "Вперед"
   show_more: "Показать еще"
   courses2: "курсов"
   materials: "Материал"
@@ -298,3 +302,5 @@ ru:
   message: "Сообщение"
   sent: "Отправлено"
   file: "Файл"
+  page: "Страница"
+  show_less: "Показать меньше"
