--- a/config/locales.yml
+++ b/config/locales.yml
@@ -20,8 +20,8 @@ en:
   retry: "Retry connection"
   cs_active: "active"
   cs_archived: "archived"
-  average_score_percent: "Summary average score in your profile"
-  total_time_spent: "Total time spent by learning"
+  average_score_percent: "Summary average score"
+  total_time_spent: "Total time spent on learning"
   courses: "Courses"
   hour: "h."
   minutes: "min."
@@ -151,6 +151,8 @@ en:
   file: "File"
   page: "Page"
   show_less: "Show less"
+  studying: "Studying"
+  text: "Text"
 ru:
   greeting_message: "Привет,"
   farewell_message: "Пока"
@@ -173,8 +175,8 @@ ru:
   retry: "Попытка подключения"
   cs_active: "на изучении"
   cs_archived: "завершенные"
-  average_score_percent: "Успешность прохождения всех курсов"
-  total_time_spent: "Общее время прохождения курсов"
+  average_score_percent: "Качество освоения обучения"
+  total_time_spent: "Общее время затраченное на обучение"
   courses: "Курсы"
   hour: "ч."
   minutes: "мин."
@@ -304,3 +306,5 @@ ru:
   file: "Файл"
   page: "Страница"
   show_less: "Показать меньше"
+  studying: "Обучение"
+  text: "Текст"
