Small fix for locales

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -139,6 +139,7 @@ en:
   status_inprogress: "In progress"
   latest: "Latest"
   forbidden: "Forbidden"
+  status_completed: "Completed"
   completed: "Completed"
   new: "New"
   about_bot: "Hi! I am a chatbot - personal assistant in the world of distance learning. With me, training becomes more accessible and interesting. Where do we start?"
@@ -297,6 +298,7 @@ ru:
   latest: "Последний"
   forbidden: "Доступ закрыт"
   completed: "Пройдено"
+  status_completed: "Пройдено"
   new: "Новый"
   about_bot: "Привет! Я чат-бот — личный помощник в мире дистанционного обучения. Со мной обучение становится доступнее и интереснее. С чего начнем?"
   company: "Организация"
