Updated ai skills

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -157,6 +157,7 @@ en:
   documents: "Documents"
   common_folder: "Common folder"
   incoming: "Incoming"
+  creation_info: "I was created by <a href='https://sun1-93.userapi.com/c639318/v639318312/33bab/rbFlIllggaM.jpg'> Alexander Leskov </a> - @alexleskov from <a href = 'https: // teachbase.ru '> Teachbase </a> in 2020. And the idea of my appearance arose as an experiment - to create an assistant in online learning."
 ru:
   greeting_message: "Привет,"
   farewell_message: "Пока"
@@ -316,3 +317,4 @@ ru:
   documents: "Документы"
   common_folder: "Общая папка"
   incoming: "Входящее"
+  creation_info: "Меня создал <a href='https://sun1-93.userapi.com/c639318/v639318312/33bab/rbFlIllggaM.jpg'>Александр Лесков</a> - @alexleskov из <a href='https://teachbase.ru'>Teachbase</a> в 2020 году. А идея моего появления возникла как эксперимент - создать помощника в онлайн-обучении."
