--- a/config/locales.yml
+++ b/config/locales.yml
@@ -159,6 +159,7 @@ en:
   incoming: "Incoming"
   creation_info: "I was created by <a href='https://sun1-93.userapi.com/c639318/v639318312/33bab/rbFlIllggaM.jpg'> Alexander Leskov </a> - @alexleskov from <a href = 'https: // teachbase.ru '> Teachbase </a> in 2020. And the idea of my appearance arose as an experiment - to create an assistant in online learning."
   enter_what_find: "Clarify what you need. Keyword or phrase"
+  notify_about_new: "You are waiting for a new"
 ru:
   greeting_message: "Привет,"
   farewell_message: "Пока"
@@ -320,3 +321,4 @@ ru:
   incoming: "Входящее"
   creation_info: "Меня создал <a href='https://sun1-93.userapi.com/c639318/v639318312/33bab/rbFlIllggaM.jpg'>Александр Лесков</a> - @alexleskov из <a href='https://teachbase.ru'>Teachbase</a> в 2020 году. А идея моего появления возникла как эксперимент - создать помощника в онлайн-обучении."
   enter_what_find: "Уточните, что нужно. Ключевое слово или словосочетание"
+  notify_about_new: "Тебя уже ждет новый"
