--- a/config/locales.yml
+++ b/config/locales.yml
@@ -160,6 +160,7 @@ en:
   creation_info: "I was created by <a href='https://sun1-93.userapi.com/c639318/v639318312/33bab/rbFlIllggaM.jpg'> Alexander Leskov </a> - @alexleskov from <a href = 'https: // teachbase.ru '> Teachbase </a> in 2020. And the idea of my appearance arose as an experiment - to create an assistant in online learning."
   enter_what_find: "Clarify what you need. Keyword or phrase"
   notify_about_new: "You are waiting for a new"
+  find_again: "Find again"
 ru:
   greeting_message: "Привет,"
   farewell_message: "Пока"
@@ -322,3 +323,4 @@ ru:
   creation_info: "Меня создал <a href='https://sun1-93.userapi.com/c639318/v639318312/33bab/rbFlIllggaM.jpg'>Александр Лесков</a> - @alexleskov из <a href='https://teachbase.ru'>Teachbase</a> в 2020 году. А идея моего появления возникла как эксперимент - создать помощника в онлайн-обучении."
   enter_what_find: "Уточните, что нужно. Ключевое слово или словосочетание"
   notify_about_new: "Тебя уже ждет новый"
+  find_again: "Поискать еще"
