Added demo mode

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -3,7 +3,7 @@ en:
   farewell_message: "Bye"
   start_menu_message: "<i>Choose that you want</i>"
   thanks: "Thanks"
-  sign_in: "Start"
+  sign_in: "Sign in"
   more_actions: "More actions"
   settings: "Settings"
   hide_menu: "[Hide menu]"
@@ -161,12 +161,17 @@ en:
   enter_what_find: "Clarify what you need. Keyword or phrase"
   notify_about_new: "You are waiting for a new"
   find_again: "Find again"
+  demo_mode: "Demo mode"
+  send_contact: "Send contact"
+  click_to_send_contact: "Click on the button in the menu to share your contacts. It is safe and will only be used for registration. Honestly."
+  enter_by_auth_data: "Log in by entering your username and password yourself."
+  meet_with_bot: "Let's get acquainted!"
 ru:
   greeting_message: "Привет,"
   farewell_message: "Пока"
   start_menu_message: "<i>Что делаем дальше?</i>"
   thanks: "Спасибо"
-  sign_in: "Старт"
+  sign_in: "Вход"
   more_actions: "Еще"
   settings: "Настройки"
   hide_menu: "[Скрыть меню]"
@@ -324,3 +329,8 @@ ru:
   enter_what_find: "Уточните, что нужно. Ключевое слово или словосочетание"
   notify_about_new: "Тебя уже ждет новый"
   find_again: "Поискать еще"
+  demo_mode: "Демо-режим"
+  send_contact: "Отправить контакты"
+  click_to_send_contact: "Нажмите на кнопку в меню, чтобы поделиться своими контактами. Это безопасно и нужно только для регистрации. Честное слово."
+  enter_by_auth_data: "Выполнить вход введя логин и пароль самостоятельно."
+  meet_with_bot: "Давайте познакомимся!"
