--- a/config/locales.yml
+++ b/config/locales.yml
@@ -6,6 +6,7 @@ en:
   sign_in: "Sign in"
   more_actions: "More actions"
   settings: "Settings"
+  settings_list: "Settings"
   hide_menu: "[Hide menu]"
   add_user_login: "Enter your <b>LOGIN</b> (email/phone)"
   add_user_password: "Enter you <b>PASSWORD</b>"
@@ -27,6 +28,7 @@ en:
   minutes: "min."
   profile_state: "Your profile progress"
   profile: "Profile"
+  user_profile: "Profile"
   need_auth: "You must be authorized"
   for_profile: "for profile"
   stage_empty: "It's just empty now"
@@ -176,6 +178,7 @@ ru:
   sign_in: "Вход"
   more_actions: "Еще"
   settings: "Настройки"
+  settings_list: "Настройки"
   hide_menu: "[Скрыть меню]"
   add_user_login: "Введите ваш <b>ЛОГИН</b> (email/номер телефона)"
   add_user_password: "Введите ваш <b>ПАРОЛЬ</b>"
@@ -197,6 +200,7 @@ ru:
   minutes: "мин."
   profile_state: "Прогресс твоего профиля"
   profile: "Профиль"
+  user_profile: "Профиль"
   need_auth: "Требуется авторизация"
   for_profile: "профиля"
   stage_empty: "Пока что здесь пусто"
