--- a/config/locales.yml
+++ b/config/locales.yml
@@ -125,6 +125,7 @@ en:
   checking: "Checking"
   undefined_action: "Oops! Don't know how to do it at now"
   undefined_text: "Oh! I don't understand what is needed ... Rephrase?"
+  undefined_file: "Oh file. Thanks, but I don't need it yet :)"
   battle: "Battle"
   description: "Description"
   categories: "Categories"
@@ -165,11 +166,14 @@ en:
   find_again: "Find again"
   demo_mode: "Demo mode"
   send_contact: "Send contact"
-  click_to_send_contact: "Click on the button in the menu to share your contacts. It is safe and will only be used for registration. Honestly."
-  enter_by_auth_data: "Log in by entering your username and password yourself."
+  click_to_send_contact: "Click on the button in the menu to share your contacts."
+  notice_about_safety: "It is safe and will only be used for registration. Honestly."
+  enter_by_auth_data: "Log in by entering your username and password yourself or reset password."
   meet_with_bot: "Let's get acquainted!"
   about_bot_demo_mode: "My name is <a href='https://storage.yandexcloud.net/tbpublic/other/teachbaser.jpg'> Teachbaser </a> - I am a Telegram bot. Personal assistant in teaching on the Teachbase platform.\n\nI give the opportunity to study the assigned courses directly in Telegram, view the library of available documents, and when a new course is assigned, I will send a notification about it. In addition, I have many other useful functions.\n\nWe will start getting to know each other closer? Select the item of interest below and get started."
   timeout: "Timeout of waiting for a response from the user after 30 seconds."
+  reset_password: "Reset password"
+  password_changed: "Password changed"
 ru:
   greeting_message: "Привет,"
   farewell_message: "Пока"
@@ -297,6 +301,7 @@ ru:
   checking: "На проверке"
   undefined_action: "Ой! С этим я еще не умею работать :( Но скоро научусь!"
   undefined_text: "Ой! Не понял что нужно... Перефразируй?"
+  undefined_file: "О, файл. Спасибо, но он мне пока не требуется :)"
   battle: "Сражение"
   description: "Описание"
   categories: "Категории"
@@ -337,9 +342,12 @@ ru:
   find_again: "Поискать еще"
   demo_mode: "Демо-режим"
   send_contact: "Отправить контакты"
-  click_to_send_contact: "Нажмите на кнопку в меню, чтобы поделиться своими контактами. Это безопасно и нужно только для регистрации. Честное слово."
-  enter_by_auth_data: "Выполнить вход введя логин и пароль самостоятельно."
+  click_to_send_contact: "Нажмите на кнопку в меню, чтобы поделиться своими контактами."
+  notice_about_safety: "Это безопасно и нужно только для регистрации. Честное слово."
+  enter_by_auth_data: "Выполнить вход введя логин и пароль самостоятельно или сбросьте пароль."
   meet_with_bot: "Давайте познакомимся!"
   info_about_setted_password: "Похоже, что вы уже были зарегистрированы в системе ранее с таким номером телефона."
   about_bot_demo_mode: "Меня зовут <a href='https://storage.yandexcloud.net/tbpublic/other/teachbaser.jpg'>Teachbaser</a> - я Telegram-бот. Персональный помощник в обучении на платформе Teachbase.\n\nДаю возможность изучать назначенные курсы прямо в Telegram, просматривать библиотеку доступных документов, а когда будет назначен новый курс, то пришлю уведомление об этом. Кроме этого, имею еще много разных полезных функций.\n\nНачнем знакомство по ближе? Выбирай ниже интересующий пункт и приступим."
   timeout: "Таймаут времени ожидания ответа от пользователя спустя 30 секунд."
+  reset_password: "Сбросить пароль"
+  password_changed: "Пароль изменен"
