--- a/config/locales.yml
+++ b/config/locales.yml
@@ -170,7 +170,7 @@ en:
   notice_about_safety: "It is safe and will only be used for registration. Honestly."
   enter_by_auth_data: "Log in by entering your username and password yourself or reset password."
   meet_with_bot: "Let's get acquainted!"
-  about_bot_demo_mode: "My name is <a href='https://storage.yandexcloud.net/tbpublic/other/teachbaser.jpg'> Teachbaser </a> - I am a Telegram bot. Personal assistant in teaching on the Teachbase platform.\n\nI give the opportunity to study the assigned courses directly in Telegram, view the library of available documents, and when a new course is assigned, I will send a notification about it. In addition, I have many other useful functions.\n\nWe will start getting to know each other closer? Select the item of interest below and get started."
+  about_bot_demo_mode: "My name is <a href='https://storage.yandexcloud.net/tbpublic/other/teachbaser.jpg'>Teachbaser</a> - I am a Telegram bot, your assistant in teaching on the Teachbase platform.\nTake courses, study the library of available documents - all this is right here in Telegram. With me you will not miss a new assigned course - I will send a notification. , I can perform many other useful functions.\nLet's start acquaintance? Select the item of interest below:"
   timeout: "Timeout of waiting for a response from the user after 30 seconds."
   reset_password: "Reset password"
   password_changed: "Password changed"
@@ -347,7 +347,7 @@ ru:
   enter_by_auth_data: "Выполнить вход введя логин и пароль самостоятельно или сбросьте пароль."
   meet_with_bot: "Давайте познакомимся!"
   info_about_setted_password: "Похоже, что вы уже были зарегистрированы в системе ранее с таким номером телефона."
-  about_bot_demo_mode: "Меня зовут <a href='https://storage.yandexcloud.net/tbpublic/other/teachbaser.jpg'>Teachbaser</a> - я Telegram-бот. Персональный помощник в обучении на платформе Teachbase.\n\nДаю возможность изучать назначенные курсы прямо в Telegram, просматривать библиотеку доступных документов, а когда будет назначен новый курс, то пришлю уведомление об этом. Кроме этого, имею еще много разных полезных функций.\n\nНачнем знакомство по ближе? Выбирай ниже интересующий пункт и приступим."
+  about_bot_demo_mode: "Меня зовут <a href='https://storage.yandexcloud.net/tbpublic/other/teachbaser.jpg'>Teachbaser</a> - я Telegram-бот, твой помощник в обучении на платформе Teachbase.\nПроходи курсы, изучай библиотеку доступных документов - все это прямо здесь, в Telegram. Со мной ты не пропустишь новый назначенный курс - я пришлю уведомление. Кроме этого, умею выполнять много других полезных функций.\nНачнем знакомство? Выбирай ниже интересующий пункт:"
   timeout: "Таймаут времени ожидания ответа от пользователя спустя 30 секунд."
   reset_password: "Сбросить пароль"
   password_changed: "Пароль изменен"
