--- a/config/locales.yml
+++ b/config/locales.yml
@@ -8,8 +8,9 @@ en:
   settings: "Settings"
   settings_list: "Settings"
   hide_menu: "[Hide menu]"
-  add_user_login: "Enter your <b>LOGIN</b> (email/phone)"
-  add_user_password: "Enter you <b>PASSWORD</b>"
+  add_user_login: "Enter <b>LOGIN</b> (email/phone)"
+  add_user_password: "Enter <b>PASSWORD</b>"
+  new_password_condition: "The new password must be at least 6 characters long"
   not_correct_email: "This is not email."
   error: "Error"
   auth_failed: "Not correct email or password."
@@ -184,8 +185,9 @@ ru:
   settings: "Настройки"
   settings_list: "Настройки"
   hide_menu: "[Скрыть меню]"
-  add_user_login: "Введите ваш <b>ЛОГИН</b> (email/номер телефона)"
-  add_user_password: "Введите ваш <b>ПАРОЛЬ</b>"
+  add_user_login: "Введите <b>ЛОГИН</b> (email/номер телефона)"
+  add_user_password: "Введите <b>ПАРОЛЬ</b>"
+  new_password_condition: "Новый пароль должен содержать не менее 6 символов"
   not_correct_email: "Это не email."
   error: "Ошибка"
   auth_failed: "Неправильный логин или пароль."
