--- a/config/locales.yml
+++ b/config/locales.yml
@@ -171,7 +171,7 @@ en:
   notice_about_safety: "It is safe and will only be used for registration. Honestly."
   enter_by_auth_data: "Log in by entering your username and password yourself or reset password."
   meet_with_bot: "Let's get acquainted!"
-  about_bot_demo_mode: "My name is <a href='https://storage.yandexcloud.net/tbpublic/other/teachbaser.jpg'>Teachbaser</a> - I am a Telegram bot, your assistant in teaching on the Teachbase platform.\nTake courses, study the library of available documents - all this is right here in Telegram. With me you will not miss a new assigned course - I will send a notification. , I can perform many other useful functions.\nLet's start acquaintance? Select the item of interest below:"
+  about_bot_demo_mode: "My name is <a href='https://storage.yandexcloud.net/tbpublic/other/2868-300x300.png'>Teachbaser</a> - I am a Telegram bot, your assistant in teaching on the Teachbase platform.\n\nTake courses, study the library of available documents - all this is right here in Telegram. With me you will not miss a new assigned course - I will send a notification. , I can perform many other useful functions.\n\nLet's start acquaintance? Select the item of interest below:"
   timeout: "Timeout of waiting for a response from the user after 30 seconds."
   reset_password: "Reset password"
   password_changed: "Password changed"
@@ -349,7 +349,7 @@ ru:
   enter_by_auth_data: "Выполнить вход введя логин и пароль самостоятельно или сбросьте пароль."
   meet_with_bot: "Давайте познакомимся!"
   info_about_setted_password: "Похоже, что вы уже были зарегистрированы в системе ранее с таким номером телефона."
-  about_bot_demo_mode: "Меня зовут <a href='https://storage.yandexcloud.net/tbpublic/other/teachbaser.jpg'>Teachbaser</a> - я Telegram-бот, твой помощник в обучении на платформе Teachbase.\nПроходи курсы, изучай библиотеку доступных документов - все это прямо здесь, в Telegram. Со мной ты не пропустишь новый назначенный курс - я пришлю уведомление. Кроме этого, умею выполнять много других полезных функций.\nНачнем знакомство? Выбирай ниже интересующий пункт:"
+  about_bot_demo_mode: "Меня зовут <a href='https://storage.yandexcloud.net/tbpublic/other/2868-300x300.png'>Teachbaser</a> - я Telegram-бот, твой помощник в обучении на платформе Teachbase.\n\nПроходи курсы, изучай библиотеку доступных документов - все это прямо здесь, в Telegram. Со мной ты не пропустишь новый назначенный курс - я пришлю уведомление. Кроме этого, умею выполнять много других полезных функций.\n\nНачнем знакомство? Выбирай ниже интересующий пункт в меню."
   timeout: "Таймаут времени ожидания ответа от пользователя спустя 30 секунд."
   reset_password: "Сбросить пароль"
   password_changed: "Пароль изменен"
