Updated bot's phrases

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -126,6 +126,7 @@ en:
   checking: "Checking"
   undefined_action: "Oops! Don't know how to do it at now"
   undefined_text: "Oh! I don't understand what is needed ... Rephrase?"
+  undefined_contact: "The settings for communicating with this contact have not yet been set."
   undefined_file: "Oh file. Thanks, but I don't need it yet :)"
   battle: "Battle"
   description: "Description"
@@ -305,6 +306,7 @@ ru:
   undefined_action: "Ой! С этим я еще не умею работать :( Но скоро научусь!"
   undefined_text: "Ой! Не понял что нужно... Перефразируй?"
   undefined_file: "О, файл. Спасибо, но он мне пока не требуется :)"
+  undefined_contact: "Настройки для связи с этим контактом еще не установлены."
   battle: "Сражение"
   description: "Описание"
   categories: "Категории"
