Updated info about creators

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -162,7 +162,7 @@ en:
   documents: "Documents"
   common_folder: "Common folder"
   incoming: "Incoming"
-  creation_info: "I was created by <a href='https://sun1-93.userapi.com/c639318/v639318312/33bab/rbFlIllggaM.jpg'> Alexander Leskov </a> - @alexleskov from <a href = 'https: // teachbase.ru '> Teachbase </a> in 2020. And the idea of my appearance arose as an experiment - to create an assistant in online learning."
+  creation_info: "I was created by <a href='https://sun1-93.userapi.com/c639318/v639318312/33bab/rbFlIllggaM.jpg'> Alexander Leskov </a> - @alexleskov from <a href = 'https: // teachbase.ru '> Teachbase </a> in 2020. And the idea of my appearance arose as an experiment - to create an assistant in online learning.\n\nSpecial thanks to Alexander Shvaikin - @shuriksh, for help with setting up the deployment and infrastructure."
   enter_what_find: "Clarify what you need. Keyword or phrase"
   notify_about_new: "You are waiting for a new"
   find_again: "Find again"
@@ -343,7 +343,7 @@ ru:
   documents: "Документы"
   common_folder: "Общая папка"
   incoming: "Входящее"
-  creation_info: "Меня создал <a href='https://sun1-93.userapi.com/c639318/v639318312/33bab/rbFlIllggaM.jpg'>Александр Лесков</a> - @alexleskov из <a href='https://teachbase.ru'>Teachbase</a> в 2020 году. А идея моего появления возникла как эксперимент - создать помощника в онлайн-обучении."
+  creation_info: "Меня создал <a href='https://sun1-93.userapi.com/c639318/v639318312/33bab/rbFlIllggaM.jpg'>Александр Лесков</a> - @alexleskov из <a href='https://teachbase.ru'>Teachbase</a> в 2020 году. А идея моего появления возникла как эксперимент - создать помощника в онлайн-обучении.\n\nОтдельная благодарность Александру Швайкину - @shuriksh, за помощь с настройкой деплоя и инфраструктуры."
   enter_what_find: "Уточните, что нужно. Ключевое слово или словосочетание"
   notify_about_new: "Тебя уже ждет новый"
   find_again: "Поискать еще"
