--- a/config/locales.yml
+++ b/config/locales.yml
@@ -69,12 +69,12 @@ en:
   scenario: "Study mode"
   base: "Base"
   localization: "Localization"
-  show_all: "Show all"
-  show_avaliable: "Show avaliable"
-  show_unvaliable: "Show unvaliable"
-  show_all_sections: "Show all sections"
-  show_avaliable_sections: "Show avaliable sections"
-  show_unvaliable_sections: "Show unvaliable sections"
+  show_all: "All"
+  show_avaliable: "Avaliable"
+  show_unvaliable: "Unvaliable"
+  show_all_sections: "All sections"
+  show_avaliable_sections: "Avaliable sections"
+  show_unvaliable_sections: "Unvaliable sections"
   from: "from"
   avaliable: "Avaliable"
   section3: "sections"
@@ -250,7 +250,7 @@ ru:
   scenario: "Режим обучения"
   base: "Базовый"
   localization: "Язык"
-  show_all: "Показать все"
+  show_all: "Все"
   show_avaliable: "Доступные"
   show_unvaliable: "Не доступные"
   show_all_sections: "Все разделы"
