Added decline buttom for demo mode startup menu

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -297,7 +297,7 @@ ru:
   accept: "Подтвердить"
   decline: "Отменить"
   accepted: "Принято"
-  declined: "Отклонено"
+  declined: "Отменено"
   show: "Показать"
   answers: "Ответы"
   comments: "Комментарии"
