Updated router and routes, minor update for profile and course pagination

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -52,6 +52,7 @@ en:
   status_archived: "Archived"
   section: "Section"
   section2: "section"
+  section3: "section's"
   section_show_hint: "For example *[id:1]* - will open section №1"
   in: "in"
   information: "Information"
@@ -78,7 +79,7 @@ en:
   show_unvaliable_sections: "Unvaliable sections"
   from: "from"
   avaliable: "Avaliable"
-  section3: "sections"
+  search: "Search"
   find_by_query_num: "Find by №"
   find_by_query_num_sections: "Find section by №"
   enter_the_number: "Enter the number"
@@ -234,6 +235,7 @@ ru:
   status_archived: "Завершен"
   section: "Раздел"
   section2: "разделов"
+  section3: "раздела"
   section_show_hint: "Например, [id:1] - открыть Раздел №1"
   in: "в"
   information: "Информация"
@@ -260,7 +262,7 @@ ru:
   show_unvaliable_sections: "Не доступные разделы"
   from: "из"
   avaliable: "Доступно"
-  section3: "разделов"
+  search: "Поиск"
   find_by_query_num: "Найти по №"
   find_by_query_num_sections: "Найти раздел по №"
   enter_the_number: "Введите номер"
