Added documents searching and folder links

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -162,6 +162,7 @@ en:
   studying: "Studying"
   text: "Text"
   documents: "Documents"
+  document: "Document"
   common_folder: "Common folder"
   incoming: "Incoming"
   creation_info: "I was created by <a href='https://sun1-93.userapi.com/c639318/v639318312/33bab/rbFlIllggaM.jpg'> Alexander Leskov </a> - @alexleskov from <a href = 'https: // teachbase.ru '> Teachbase </a> in 2020. And the idea of my appearance arose as an experiment - to create an assistant in online learning.\n\nSpecial thanks to Alexander Shvaikin - @shuriksh, for help with setting up the deployment and infrastructure."
@@ -345,6 +346,7 @@ ru:
   studying: "Обучение"
   text: "Текст"
   documents: "Документы"
+  document: "Документ"
   common_folder: "Общая папка"
   incoming: "Входящее"
   creation_info: "Меня создал <a href='https://sun1-93.userapi.com/c639318/v639318312/33bab/rbFlIllggaM.jpg'>Александр Лесков</a> - @alexleskov из <a href='https://teachbase.ru'>Teachbase</a> в 2020 году. А идея моего появления возникла как эксперимент - создать помощника в онлайн-обучении.\n\nОтдельная благодарность Александру Швайкину - @shuriksh, за помощь с настройкой деплоя и инфраструктуры."
